removed comment from application.properties that was affecting the build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=local # Overridden by passing -P parameter into gradle build command
+spring.profiles.active=local
 
 spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
