Interim commit while switching branches This commit adds the admin and login pages. Modifications to the layout were also made to facilitate the admin pages

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	// Email support
 	compile('org.springframework.boot:spring-boot-starter-mail')
 	
+	// Spring security
+	compile("org.springframework.boot:spring-boot-starter-security")
+	
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
