Adding Google re-captcha to prevent bots from abusing the website

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,11 +1,14 @@
 server.port=8000
+
+# Local MySQL database settings
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/murraywhiteins
 spring.datasource.username=springuser
 spring.datasource.password=password
 
-# Spring actuator settings
-endpoints.enabled=true
-endpoints.sensitive=false
+# Google re-captcha settings
+google.recaptcha.key.site=6LfNATUUAAAAANud6L9Qcwk_KcnKY-prL1RgQ3w9
+google.recaptcha.key.secret=6LfNATUUAAAAANyWfe9-kL1dCXIO6er9Gy9fGDVI
 
+# Customized email settings
 email.to=JonPecoraro@gmail.com
