--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,3 +1,4 @@
+# PostgreSQL database settings
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
@@ -6,4 +7,9 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
+# Google re-captcha settings
+google.recaptcha.key.site=${RECAPTCHA_SITE_KEY}
+google.recaptcha.key.secret=${RECAPTCHA_SECRET_KEY}
+
+# Customized email settings
 email.to=m4@murraymwhiteinc.com;phillis@murraymwhiteinc.com;emily@murraymwhiteinc.com;JonPecoraro@gmail.com
