- Updated SMTP password and set the properties file to use the environment variable instead of the hardcoded password - Fixed error where the incorrect default build profile was referenced in profiles.gradle - Fixed issue where the calendar was showing up behind the modal dialog when scheduling an appointment

--- a/gradle/profiles.gradle
+++ b/gradle/profiles.gradle
@@ -15,7 +15,7 @@ if (project.hasProperty('production')) {
 // Appends properties to the application.properties file during compilation,
 // which ensures WARs and JARs always run with the profiles they were built with.
 // Also works with the bootRun task without requiring it to be extended.
-// Defaults to the "production" profile if no -P arguments are provided.
+// Defaults to the "local" profile if no -P arguments are provided.
 classes {
 	doLast {
 		FileTree tree = fileTree(dir: "build/resources/main").include("application.properties")
