--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=local
 spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
 spring.mail.username=postmaster@mg.murraywhiteins.com
-spring.mail.password=7d3d306bb1642359903fa83e8a9d0674
+spring.mail.password=${MURRAY_WHITE_INS_SMTP_PASSWORD}
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
