--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	
 	// Spring security
 	compile("org.springframework.boot:spring-boot-starter-security")
+	
+	// Guava library used for caching
+	compile('com.google.guava:guava:25.1-jre')
 
 	// AWS Simple Notification Service (for sending SMS messages)
 	compile('com.amazonaws:aws-java-sdk-sns:1.11.317')
