--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: "io.spring.dependency-management"
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -22,6 +23,12 @@ jar {
 
 repositories {
 	mavenCentral()
+}
+
+dependencyManagement {
+    imports {
+        mavenBom 'com.amazonaws:aws-java-sdk-bom:1.11.228'
+    }
 }
 
 dependencies {
@@ -38,7 +45,10 @@ dependencies {
 	compile('com.google.guava:guava:25.1-jre')
 
 	// AWS Simple Notification Service (for sending SMS messages)
-	compile('com.amazonaws:aws-java-sdk-sns:1.11.317')
+	compile('com.amazonaws:aws-java-sdk-sns')
+	
+	// AWS S3 for storing images
+	compile('com.amazonaws:aws-java-sdk-s3')
 	
 	// RESTful actuator service
 	compile("org.springframework.boot:spring-boot-starter-actuator")
