--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,11 +1,10 @@
 # Local port configuration
 server.port=8000
 
-# MySQL database configuration
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/murraywhiteins
-spring.datasource.username=springuser
-spring.datasource.password=password
+# PostgreSQL database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/murraywhiteins
+spring.datasource.username=postgres
+spring.datasource.password=example
 
 # Profile specific email settings
 spring.mail.username=postmaster@sandboxa68d603eaa784b58abbb76af7e68e79c.mailgun.org
