--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,11 +1,7 @@
-# PostgreSQL database configuration
+# MySQL database configuration
 spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+spring.datasource.username=${DATABASE_USERN}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Profile specific email settings
 spring.mail.username=postmaster@mg.murraywhiteins.com
