--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,10 +1,8 @@
-# Local port configuration
-server.port=8000
-
-# PostgreSQL database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/murraywhiteins
-spring.datasource.username=postgres
-spring.datasource.password=example
+# MySQL database configuration
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/murraywhiteins
+spring.datasource.username=springuser
+spring.datasource.password=TheSecretPassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Profile specific email settings
 spring.mail.username=postmaster@sandboxa68d603eaa784b58abbb76af7e68e79c.mailgun.org
