--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,7 +1,8 @@
 # MySQL database configuration
 spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${DATABASE_USERN}
+spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Profile specific email settings
 spring.mail.username=postmaster@mg.murraywhiteins.com
