--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -3,6 +3,7 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.tomcat.max-active=1
 
 # Profile specific email settings
 spring.mail.username=postmaster@mg.murraywhiteins.com
