Updates build.gradle with java version

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ jar {
 	version =  '0.1.0'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(1.8)
+    }
+}
+
 repositories {
 	mavenCentral()
 }
